api meeting task

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,10 @@ target 'RNFirstProject' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'ReactNativeCameraKit', :path => '../node_modules/react-native-camera-kit'
+
   target 'RNFirstProjectTests' do
     inherit! :complete
     # Pods for testing
