--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,15 +7,21 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "20.1.5948944"
+                kotlin_version = "1.5.31"
+
     }
     repositories {
         google()
         mavenCentral()
+                jcenter()
+
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.1")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+                classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
