--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.3.6",
     "react": "17.0.2",
     "react-native": "0.65.3",
+    "react-native-camera-kit": "^13.0.0",
+    "react-native-device-info": "^10.6.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6"
